Distinguish sections from subsections

--- a/12-game-information.6
+++ b/12-game-information.6
@@ -1,7 +1,11 @@
 .ss 12 0
 .TH "Game Information" "Eclipse Phase"
 
-SPOILER ALERT  If you're a player and not a gamemaster, we strongly recommend you skip this chapter, as it presents secrets and other information that can ruin your enjoyment of the game.
+This chapter provides a wealth of information and tools that gamemaster will find useful for running \f[I]Eclipse Phase\f[] campaigns.
+
+.SS Spoiler Alert
+
+If you're a player and not a gamemaster, we strongly recommend you skip this chapter, as it presents secrets and other information that can ruin your enjoyment of the game.
 No, really, stop reading, we mean it.
 Ok, maybe you're obsessive and you want to know everything about the game\[em]you did buy this book after all.
 But really, do you read the last chapter of a book first, so you know how it ends?
@@ -14,8 +18,7 @@ Hrm, in retrospect, so we are we, so we can respect that.
 Keep in mind, however, that by reading this chapter, you are now able\[em]and some may say obligated\[em]to run the game for your friends who do happen to listen to spoiler alerts.
 .RE
 
-This chapter provides a wealth of information and tools that gamemaster will find useful for running \f[I]Eclipse Phase\f[] campaigns.
-.SS Secrets That Matter
+.SH Secrets That Matter
 
 There are secrets woven all through the real history of the 21st century, and the present, and therefore all prospects for the future.
 These are the pieces of information that never make it into a habitat's mesh at all.
@@ -432,7 +435,8 @@ Some hypercorps, however, believe they can infiltrate the organization and use i
 \f[B]Jovian Republic:\f[] The Junta loathes Firewall and all it stands for and will use extreme measures to combat even the hint of Firewall activity within its sphere of influence.
 .IP \[bu] 2
 \f[B]Titanians:\f[] Most Titanians in\-the\-know are not necessarily opposed to Firewall's activi\- ties, but believe the group should be reined in and legitimized.
-.SS The ETI
+
+.SH The ETI
 
 As noted under \f[I]Extraterrestrial Intelligences,\f[] p. 352, the ETI is the advanced alien civilization responsible for the Exsurgent virus (p.
 362), and by extension, the corruption of the TITANs and the Fall.
@@ -456,7 +460,8 @@ Life forms that have evolved in drastically different environmental circumstance
 There is no guarantee that a xenomorph's thought processes or modes of thinking are in any way similar to transhuman ones, or even that their emotional responses (based on a completely different biology\[em]if they have emotions, that is) are in the same ballpark.
 Communication is likely to be a challenge, and misunderstandings are practically guaranteed.
 .RE
-.SS Exhumans
+
+.SH Exhumans
 
 Exhumans are a faction within \f[I]Eclipse Phase\f[] that seeks to transcend the transhuman and become posthuman.
 More to the point, exhumans seek to perfect their physical and mental capabilities to extreme levels, in search of some perfectionist ideal or to become something higher\-up on the evolutionary ladder.
@@ -488,7 +493,7 @@ LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
 WT T}@T{ DR T} T{ 120 T}@T{ 1
 T}@T{ 80 T}@T{ 16 T}@T{ 160 T}@T{ 35
 T}@T{ 7 T}@T{ 53 T}
-.TE 
+.TE
 \f[B]Skills:\f[] Fray 30, Investigation 80, Perception 90, others as appropriate \f[B]Implants:\f[] Access Jacks, Carapace Armor, Circadian Regulation, Direction Sense, Eidetic Memory, Endocrine Control, Hyper Linguist, Math Boost, Medichines, Multi\-Tasking, Oracle, Skillware \f[B]Notes:\f[] Mental Disorder trait x 2
 .SS Predators
 
@@ -509,10 +514,12 @@ LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
 WT T}@T{ DR T} T{ 160 T}@T{ 3
 T}@T{ 60 T}@T{ 12 T}@T{ 120 T}@T{ 65
 T}@T{ 13 T}@T{ 98 T}
-.TE 
+.TE
 \f[B]Skills:\f[] Blades 60, Fray 60, Free Fall 50, Freerunning 80, Investigation 50, Perception 60, Unarmed Combat 70 \f[B]Implants:\f[] Adrenal Boost, Carapace Armor (11/11), Chameleon Skin, Cyberclaws, Drug Glands, Endocrine Control, Enhanced Hearing, Enhanced Smell, Enhanced Vision, Grip Pads, Hardened Skeleton, Medichines, Muscle Augmentation, Neurachem (Rating 2), Oxygen Reserve, Poison Gland, Prehensile Feet, Prehensile Tail, Respirocytes, Temperature Tolerance, Toxin Filters, Vacuum Sealing, plus any other
 mods the gamemaster feels appropriate \f[B]Notes:\f[] Mental Disorder trait x 2
-.SS The Exsurgent Virus 
+
+.SH The Exsurgent Virus
+
 Only very few people (or entities) who survived the diaspora from Earth know of the true reasons and the catalyst that culminated in the Fall.
 The alien Exsurgent virus\[em]as those aware of its existence within Firewall call it\[em]set in place by the ETI to infect emerging seed AIs, is something beyond transhumanity's understanding; something far more complex than just a computer virus.
 Though some strains of the Exsurgent virus have been identified and various types of infected exsurgents have been encountered, it is widely assumed that these are creations of the TITANs.
@@ -560,14 +567,15 @@ See the strain descriptions (p.
 
 Within 12 hours of being infected, biomorphs become contagious to others.
 (Note that for the Watts\-Macleod strain, they only remain contagious for 12 hours after that.)
-.SS Digital Virus 
+
+.SS Digital Virus
 Digital strains are purely information\- or code\-based versions of the virus.
 They resemble typical computer virii, worms, or trojans, spreading throughout the mesh, exploiting holes, mimicking protocols, and taking advantage of it like a skilled hacker.
 
 Digital versions of the Exsurgent virus are treated as intelligent programs, using the same rules as infomorphs (p.
-264), with the following stats:  \f[B]Skills:\f[] Hardware: Electronics 50, Infosec 70, Interfacing 60, Investigation 50, Perception 60, Programming 50 
+264), with the following stats:  \f[B]Skills:\f[] Hardware: Electronics 50, Infosec 70, Interfacing 60, Investigation 50, Perception 60, Programming 50
 \f[B]Software:\f[] Exploit, Firewall, Sniffer, Spoof, Track, plus any others the gamemaster considers appropriate
-.SS Digital Infection 
+.SS Digital Infection
 As a matter of course, this Exsurgent virus will seek to access any new systems it comes into contact with, hacking in and copying a version of itself.
 .SS AI And Infomorph Subversion
 
@@ -679,7 +687,7 @@ A character experiencing a YGBM basilisk hack must make a COG + INT + SAV Test.
 If this fails, a single suggestion is implanted in the character's mind, without their knowledge.
 This subliminal command will be triggered at some later point, either at some predesignated time or according to certain pre\-set conditions.
 Once triggered, the character will carry out the action with all of the conviction that it is their own idea.
-The implanted suggestion may be something as simple as \[lq]kill the Firewall agent\[rq] to something as complex as \[lq]manufacture an explosive device and plant it in the cargo hold of any ship heading to Mars, set to explode one day after they disembark.\[rq] 
+The implanted suggestion may be something as simple as \[lq]kill the Firewall agent\[rq] to something as complex as \[lq]manufacture an explosive device and plant it in the cargo hold of any ship heading to Mars, set to explode one day after they disembark.\[rq]
 Since YGBM attacks are not intended to completely convert the target, but instead to simply convert them into a temporary tool or weapon, implanted commands are not designed to last long.
 The duration the suggestion will last equals 3 days +1 day per 10 points of MoF on the resistance test.
 If the command has not been triggered by this point, it dissipates, and the character is none the wiser.
@@ -869,7 +877,7 @@ LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
 WT T}@T{ DR T} T{ 100 T}@T{ 2
 T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 100
 T}@T{ 20 T}@T{ 200 T}
-.TE 
+.TE
 \f[B]Mobility System:\f[] Walker/Microlight (4/16) (may create other mobility systems with different rates) \f[B]Skills:\f[] Fray 40, Free Fall 50, Intimidation 60, Perception 50, Unarmed Combat (Grapple) 50 (60) \f[B]Notes:\f[] 360\-degree Vision, Chemical Sniffer, Electrical Sense, Enhanced Hearing, Enhanced Vision, Fractal Digits, Nanoscopic Vision, Radar, Radiation Sense, Swarm Composition (but may make SOM Tests, and plasma weapons do only 1d10 damage), T\-ray Emitter
 .SS Jellies (Biomorph)
 
@@ -890,7 +898,7 @@ LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
 WT T}@T{ DR T} T{ 90 T}@T{ 1
 T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 70
 T}@T{ 14 T}@T{ 105 T}
-.TE 
+.TE
 \f[B]Movement Rate\f[]: 4/16 \f[B]Skills:\f[] Exotic Ranged Attack (Spit) 40, Free Fall 50, Perception 60, Unarmed Combat 40 \f[B]Notes:\f[] Armor (12/12), Enhanced Smell, Spit Attack (area effect), Tongue (DV 1d10 + 3, AP 0), Toxin (Application: D, O; Onset Time: 1 Action Turn, Du\- ration: 5 Action Turns, Effect: 1d10 ÷ 2 (round up) DV per Action Turn ).
 Due to their physical form, jellies suffer the minimum amount of damage from standard kinetic weapon and blade attacks.
 .SS Shifters (Synthmorph)
@@ -911,9 +919,9 @@ LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
 WT T}@T{ DR T} T{ 100 T}@T{ 2
 T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 60
 T}@T{ 12 T}@T{ 120 T}
-.TE 
+.TE
 \f[B]Mobility System:\f[] Walker (4/20) \f[B]Skills:\f[] Blades 60, Deception 55, Disguise 60, Fray 50, Freerunning 55, Impersonation 60, Perception 50, Unarmed Combat 50 \f[B]Notes:\f[] Armor (13/13), Enhanced Hearing, Enhanced Vision, Shape\-Adjusting (Programmable Liquid Metal Form)
-.SS Snappers (Synthmorphs) 
+.SS Snappers (Synthmorphs)
 Snapper exsurgents are typically crafted from vehicles or other large synthetic shells or by melding multiple synthmorphs together.
 They take the form of an insectoid multi\-segmented hexagonal tube with multiple sets of limbs, three apiece, set radially 120 degrees around the torso.
 These limbs are heavy, double\-jointed and articulated with three joints.
@@ -930,7 +938,7 @@ LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
 WT T}@T{ DR T} T{ 100 T}@T{ 2
 T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 70
 T}@T{ 14 T}@T{ 140 T}
-.TE 
+.TE
 \f[B]Mobility System:\f[] Walker (4/24) \f[B]Skills:\f[] Climbing 45, Fray 40, Freerunning 40, Perception 40, Unarmed Combat (Pincers) 55 (65) \f[B]Notes:\f[] 360\-degree Vision, Armor (16/16), Enhanced Vision, Extra Limbs (9, 12, or 15 total), Lidar, Magnetic System, Pincers (DV 2d10 + 3, AP \[en]3), Structural Enhancement
 .SS Whippers (Biomorph)
 
@@ -949,7 +957,7 @@ LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
 WT T}@T{ DR T} T{ 100 T}@T{ 2
 T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 35
 T}@T{ 7 T}@T{ 53 T}
-.TE 
+.TE
 \f[B]Movement Rate:\f[] 8/40 \f[B]Skills:\f[] Climbing 40, Fray 50, Free Fall 40, Freerunning 50, Infiltration 40, Perception 50, Unarmed Combat (Tentacles) 45 (55) \f[B]Notes:\f[] Enhanced Vision, Tentacle Whip (DV 2d10 + 1, AP \[en]1)
 .SS Wrappers (Biomorph)
 
@@ -968,7 +976,7 @@ LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
 WT T}@T{ DR T} T{ 100 T}@T{ 1
 T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 45
 T}@T{ 9 T}@T{ 68 T}
-.TE 
+.TE
 \f[B]Movement Rate:\f[] 4/16 \f[B]Skills:\f[] Fray 40, Free Fall 50, Perception 50, Unarmed Combat (Grapple) 50 (60) \f[B]Notes:\f[] Armor (8/8), Bite (DV 2d10 + 3, AP \[en]5, must grapple first), Chameleon Skin, Claws (DV 1d10 + 2, AP \[en]2), Enhanced Hearing, Infrared Sensing, Vacuum Sealing
 .SS Exsurgent Psi
 
@@ -1053,7 +1061,8 @@ The exsurgent redirects electromagnetic waves with this sleight, refracting them
 .SS Pyrokinesis
 
 Similar to cryokinesis, this sleight enables the exsurgent to accelerate the molecules, increase friction, or focus heat in a specific area, causing materials to ignite or smolder.
-.SS The Factors
+
+.SH The Factors
 
 The alien species known as the Factors are unlike anything mankind has encountered so far (see \f[I]First\f[] \f[I]Contact: The Factors,\f[] p. 40).
 Though they are aloof and stand\-offish, their willingness and sometimes eagerness to deal with (parts of) transhumanity indicate either a keen interest on their part in transhuman affairs or some hidden ulterior agenda.
@@ -1246,7 +1255,7 @@ LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
 WT T}@T{ DR T} T{ 60 T}@T{ 1
 T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 30
 T}@T{ 7 T}@T{ 45 T}
-.TE 
+.TE
 \f[B]Movement Rate:\f[] 4/16 \f[B]Skills:\f[] Deception 70, Exotic Ranged Attack: Factor Dust 45, Fray 25, Free Fall 40, Hardware: Electronics 35, Infosec 35, Intimidation 50, Kinesics 40, Perception 50, Persuasion 60, Protocol 50, Research 35, Unarmed Combat 30 \f[B]Notes:\f[] Access Jacks, Chameleon Skin, Grip Pads, Infrared Sensing, Magnetoception, Poison Gland (Factor Dust Toxin)
 .SS Guardians
 
@@ -1263,9 +1272,10 @@ LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
 WT T}@T{ DR T} T{ 70 T}@T{ 1
 T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 50
 T}@T{ 10 T}@T{ 75 T}
-.TE 
+.TE
 \f[B]Movement Rate:\f[] 4/20 \f[B]Skills:\f[] Climbing 40, Exotic Ranged Attack: Factor Dust 65, Fray 50, Free Fall 40, Freerunning 40, Infiltration 40, Intimidation 50, Kinesics 20, Perception 50, Profession: Security Procedures 50, Unarmed Combat (Tentacles) 50 (60) \f[B]Notes:\f[] Chameleon Skin, Eelware, Electrical Sense, Grip Pads, Infrared Sensing, Magnetoception, Poison Gland (Factor Dust Toxin), Tentacle Whip (DV 2d10 + 1, AP \[en]1)
-.SS The Iktomi
+
+.SH The Iktomi
 
 Little is known about the alien race known as the Iktomi except for the ancient ruins they left behind on Echo V (p.
 109).
@@ -1278,7 +1288,8 @@ Having suffered through its own near\-apocalypse, it is not comforting for trans
 
 Though the Iktomi are likely long extinct, the remnants of their civilizations presents a plot hook for gamemasters to use for building scenarios.
 Perhaps evidence is uncovered of Iktomi settlements in other star systems, and the characters are sent to investigate or a relic is unearthed that suggests the Iktomi fell prey to some danger that now threaten transhumanity.
-.SS The Pandora Gates
+
+.SH The Pandora Gates
 
 The five known Pandora Gates (see \f[I]Opening Pandora's\f[] \f[I]Gate,\f[] p. 46) all look and operate in a similar fashion, though they vary wildly in terms of size, shape, and available destinations.
 The gates are built from some sort of stable exotic matter whose full atomic structure scientists haven't come close to cracking.
@@ -1373,7 +1384,8 @@ While the experience of passing through is instantaneous from an outside observe
 Reports have varied from experiencing this period as a calm, meditative state to spooky accounts of being lost in blackness and surrounded by unseen whispering entities or more hellish experiences of encountering monstrous presences Though rare, some have passed through only to collapse in a gibbering heap, their sanity ripped away.
 A few report feeling that they have carried a presence with them ever since ...
 While the gamemaster can make use of any of these anomalies, they are also encouraged to use their imagination to generate truly creepy and strange experiences At the same time, gamemasters shouldn't make such experiences so prevalent that the players resist entering any gates or the novelty of such events runs dry.
-.SS Project Ozma
+
+.SH Project Ozma
 
 The origins of Project Ozma date to the first modern SETI (Search for Extra\-Terrestrial Intelligence) experiments in the mid\-20th century.
 That experiment\[em]also named Project Ozma\[em]grew into a larger, international concerted effort to try and locate and identify ETIs; a myriad of projects blossomed during this time period, all falling under the general SETI nomenclature.
@@ -1435,7 +1447,8 @@ Though Project Ozma and Firewall often see eye\-to\-eye concerning the nature of
 This \[lq]at odds\[rq] mentality does not stem so much from the methods used (though most Firewall consider Project Ozma personnel explosive\-happy\-puppets that can't think their way out of a skin sack) as from conflicting agendas.
 Project Ozma does not trust an organization as powerful as Firewall because it does not have a rigid enough hierarchy and is outside of any known authority's control (namely themselves).
 Conversely Firewall doesn't trust Project Ozma as they are too close to the powerful inner system elites and their opposition to x\-risks is a more incidental side effect of more self\-serving goals.
-.SS Prometheans
+
+.SH Prometheans
 
 The Prometheans were the first actual seed AIs created by transhumanity (by the Singularity Foundation) before the Fall.
 Specifically developed as \[lq]friendly\[rq] AIs, the Prometheans are programmed to consider themselves part of the transhuman family and to act in transhumanity's best interests.
@@ -1457,7 +1470,8 @@ Gamemasters are encouraged to keep Promethean involvement with player characters
 Their existence and involvement can in fact be the basis for an entire adventure, perhaps leading sentinel characters to wonder exactly who they are working for.
 Though, as seed AIs, they cannot download their full minds into a transhuman morph, they are capable of making severely dumbed\-down delta forks that they may sleeve into physical forms.
 Within the mesh, of course, Prometheans are nearly unstoppable adversaries, able to rip into secure networks with ease, though they prefer methods of covert infiltration rather than direct subversion.
-.SS The Titan And Their Legacy
+
+.SS The TITANs and their legacy
 
 As noted in \f[I]Secrets That Matter\f[] (p.
 352), the TITANs are not quite the bogeyman that they have been made out to be in the wake of the Fall.
@@ -1519,7 +1533,7 @@ LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
 WT T}@T{ DR T} T{ 100 T}@T{ 1
 T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 50
 T}@T{ 20 T}@T{ \[em] T}
-.TE 
+.TE
 \f[B]Skills:\f[] Beam Weapons 50, Climbing 60, Fray 40, Free Fall 40, Freerunning 50, Infiltration 70, Infosec 65, Interfacing 45, Intimidation 50, Kinetic Weapons 60, Perception 50, Programming: Nanofabrication 80, Research 40, Spray Weapons 45, Unarmed Combat 55 \f[B]Notes:\f[] Any implants, gear, weapons, or enhancements the gamemaster desires
 .SS Headhunters
 
@@ -1539,9 +1553,9 @@ LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
 WT T}@T{ DR T} T{ 70 T}@T{ 1
 T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 30
 T}@T{ 6 T}@T{ \[em] T}
-.TE 
+.TE
 \f[B]Mobility System:\f[] Winged (8/32) \f[B]Skills:\f[] Flight 70, Fray 60, Exotic Melee Weapon: Buzz\-saws 55, Infiltration 60, Investigation 40, Perception 40, Unarmed Combat 55 \f[B]Notes:\f[] Armor 6/6, Buzzsaws (1d10 + 3 DV), Enhanced Vision, Lidar, T\-Ray Emitter
-.SS Hunter\-Killers 
+.SS Hunter\-Killers
 These lethal flying drones achieved air superiority during TITAN military operations.
 Their sleek jet\-powered form unfolds for vectored\-thrust hovering and weapons deployment.
 
@@ -1556,7 +1570,7 @@ LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
 WT T}@T{ DR T} T{ 90 T}@T{ 2
 T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 50
 T}@T{ 10 T}@T{ \[em] T}
-.TE 
+.TE
 \f[B]Mobility System:\f[] Thrust Vector (8/80) \f[B]Skills:\f[] Beam Weapons 55, Flight 80, Fray 60, Infiltration 40, Kinetic Weapons 65, Perception 50, Seeker Weapons 80 \f[B]Notes:\f[] Armor 14/14, Anti\-Glare, Chameleon Skin, Enhanced Vision, Lidar, Radar, Shape\-Adjusting \f[B]Typical Weapons:\f[] 2 Particle Beam Rifles, 2 Railgun Machine Guns, 2 Seeker Rifles
 .SS Warbots
 
@@ -1574,10 +1588,10 @@ LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
 WT T}@T{ DR T} T{ 60 T}@T{ 2
 T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 80
 T}@T{ 16 T}@T{ \[em] T}
-.TE 
+.TE
 \f[B]Mobility System:\f[] Walker (4/20) \f[B]Skills:\f[] Beam Weapons 60, Exotic Melee Weapon: Tentacles 40, Fray 50, Infiltration 30, Kinetic Weapons 70, Perception 50, Seeker Weapons 50, Spray Weapons 50, Unarmed Combat 50 \f[B]Notes:\f[] Armor 20/20, 360\-Degree Vision, Anti\-Glare, Chameleon Skin, Chem Sniffer, Cyber Claws (2d10 + 6 DV), Electrical Sense, Enhanced Vision, Extra Limbs (6), Lidar, Magnetic System, Pneumatic Limbs, Radar, Tentacles (prehensile, 1d10 + 6 DV), T\-Ray Emitter
 \f[B]Typical Weapons:\f[] Particle Beam Rifle, Plasma Rifle, Pulser, Railgun Machine Gun, Seeker Rifle, Torch
-.SS Self\-Replicating Nanoswarms 
+.SS Self\-Replicating Nanoswarms
 The nanoswarms distributed by the TITANs are a step beyond the nanotechnology available to transhumanity.
 Unlike transhuman\-created nanoswarms, the TITAN swarms are autonomous, sapient, and self\-replicating.
 They are also highly adaptive, meaning they are not single function but can modify themselves to perform almost any nanoswarm task.
@@ -1657,7 +1671,8 @@ The target of this virus begins suffering from bizarre fleshy growths.
 After four hours, their body literally erupts with meaty \[lq]vines\[rq] or \[lq]tentacles\[rq] that warp into spiral patterns.
 This process inflicts 1d10 DV and 1d10 SV per hour to the victim until they eventually transform into an unworldly expanse of fleshy growth.
 In many cases, growth has continued long after a character's death, creating expansive carpets and vines of skin and blood vessels, like some sort of bizarre meat plant.
-.SS Gamemastering And Administration
+
+.SH Gamemastering And Administration
 
 The following advice will assist gamemasters in running their games more efficiently.
 .SS Awarding Rez Points
