--- a/12-game-information.6
+++ b/12-game-information.6
@@ -483,17 +483,18 @@ The cerebral mass of neurode brains gives them impressive calculation and other 
 Neurodes typically defend themselves with swarms of teleoperated drones.
 
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ 40 T}@T{ 10 T}@T{ 40
-T}@T{ 20 T}@T{ 30 T}@T{ 10 T}@T{ 40
-T}@T{ \[en] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 120 T}@T{ 1
-T}@T{ 80 T}@T{ 16 T}@T{ 160 T}@T{ 35
-T}@T{ 7 T}@T{ 53 T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR | \fBINT\fR | \fBREF\fR | \fBSAV\fR | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
+| 40         | 10        | 40        | 20        | 30        | 10        | 40        | \[en]     |
+| \fIINIT\fR | \fBSPD\fR | \fBLUC\fR | \fITT\fR  | \fIIR\fR  | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
+| 120        | 1         | 80        | 16        | 160       | 35        | 7         | 53        |
 .TE
+
 \f[B]Skills:\f[] Fray 30, Investigation 80, Perception 90, others as appropriate \f[B]Implants:\f[] Access Jacks, Carapace Armor, Circadian Regulation, Direction Sense, Eidetic Memory, Endocrine Control, Hyper Linguist, Math Boost, Medichines, Multi\-Tasking, Oracle, Skillware \f[B]Notes:\f[] Mental Disorder trait x 2
 .SS Predators
 
@@ -504,17 +505,18 @@ Pushing this even further, some predators undergo experimental psychosurgery to 
 A few predators take their survival\-of\-the\-fittest ideology to an extreme, modifying their digestive systems for a cannibalistic diet, and relishing in the slaughter and feasting on of transhumans.
 
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ 30 T}@T{ 40 T}@T{ 40
-T}@T{ 40 T}@T{ 15 T}@T{ 40 T}@T{ 30
-T}@T{ \[en] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 160 T}@T{ 3
-T}@T{ 60 T}@T{ 12 T}@T{ 120 T}@T{ 65
-T}@T{ 13 T}@T{ 98 T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR | \fBINT\fR | \fBREF\fR | \fBSAV\fR | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
+| 30         | 40        | 40        | 40        | 15        | 40        | 30        | \[en]     |
+| \fIINIT\fR | \fBSPD\fR | \fBLUC\fR | \fITT\fR  | \fIIR\fR  | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
+| 160        | 3         | 60        | 12        | 120       | 65        | 13        | 98        |
 .TE
+
 \f[B]Skills:\f[] Blades 60, Fray 60, Free Fall 50, Freerunning 80, Investigation 50, Perception 60, Unarmed Combat 70 \f[B]Implants:\f[] Adrenal Boost, Carapace Armor (11/11), Chameleon Skin, Cyberclaws, Drug Glands, Endocrine Control, Enhanced Hearing, Enhanced Smell, Enhanced Vision, Grip Pads, Hardened Skeleton, Medichines, Muscle Augmentation, Neurachem (Rating 2), Oxygen Reserve, Poison Gland, Prehensile Feet, Prehensile Tail, Respirocytes, Temperature Tolerance, Toxin Filters, Vacuum Sealing, plus any other
 mods the gamemaster feels appropriate \f[B]Notes:\f[] Mental Disorder trait x 2
 
@@ -867,17 +869,18 @@ For rules purposes, treat creepers the same as a self\-replicating nanoswarm (p.
 383).
 
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ +5 (20) T}@T{ \[em] (15) T}@T{ +5 (20)
-T}@T{ +10 (30) T}@T{ \[em] (15) T}@T{ \[em] (15) T}@T{ +10 (30)
-T}@T{ \[em] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 100 T}@T{ 2
-T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 100
-T}@T{ 20 T}@T{ 200 T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR    | \fBINT\fR | \fBREF\fR | \fBSAV\fR     | \fBSOM\fR     | \fBWIL\fR | \fBMOX\fR |
+| +5 (20)    | \[em] (15)   | +5 (20)   | +10 (30)  | \[em] (15)    | \[em] (15)    | +10 (30)  | \[em]     |
+| \fIINIT\fR | \fBSPD\fR    | \fBLUC\fR | \fITT\fR  | \fIIR\fR      | \fBDUR\fR     | \fIWT\fR  | \fIDR\fR  |
+| 100        | 2            | \[em]     | \[em]     | \[em]         | 100           | 20        | 200       |
 .TE
+
 \f[B]Mobility System:\f[] Walker/Microlight (4/16) (may create other mobility systems with different rates) \f[B]Skills:\f[] Fray 40, Free Fall 50, Intimidation 60, Perception 50, Unarmed Combat (Grapple) 50 (60) \f[B]Notes:\f[] 360\-degree Vision, Chemical Sniffer, Electrical Sense, Enhanced Hearing, Enhanced Vision, Fractal Digits, Nanoscopic Vision, Radar, Radiation Sense, Swarm Composition (but may make SOM Tests, and plasma weapons do only 1d10 damage), T\-ray Emitter
 .SS Jellies (Biomorph)
 
@@ -888,17 +891,18 @@ The lubricating coating that envelopes jellies is both toxic and slightly corros
 This substance may also be \[lq]spit\[rq] at targets.
 
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ +10 (30) T}@T{ \[en]5 (10) T}@T{ +10 (30)
-T}@T{ \[em] (15) T}@T{ \[em] (15) T}@T{ +5 (20) T}@T{ +10 (30)
-T}@T{ \[em] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 90 T}@T{ 1
-T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 70
-T}@T{ 14 T}@T{ 105 T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR    | \fBINT\fR | \fBREF\fR     | \fBSAV\fR     | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
+| +10 (30)   | \[en]5 (10)  | +10 (30)  | \[em] (15)    | \[em] (15)    | +5 (20)   | +10 (30)  | \[em]     |
+| \fIINIT\fR | \fBSPD\fR    | \fBLUC\fR | \fITT\fR      | \fIIR\fR      | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
+| 90         | 1            | \[em]     | \[em]         | \[em]         | 70        | 14        | 105       |
 .TE
+
 \f[B]Movement Rate\f[]: 4/16 \f[B]Skills:\f[] Exotic Ranged Attack (Spit) 40, Free Fall 50, Perception 60, Unarmed Combat 40 \f[B]Notes:\f[] Armor (12/12), Enhanced Smell, Spit Attack (area effect), Tongue (DV 1d10 + 3, AP 0), Toxin (Application: D, O; Onset Time: 1 Action Turn, Du\- ration: 5 Action Turns, Effect: 1d10 ÷ 2 (round up) DV per Action Turn ).
 Due to their physical form, jellies suffer the minimum amount of damage from standard kinetic weapon and blade attacks.
 .SS Shifters (Synthmorph)
@@ -909,17 +913,18 @@ This allows the shifter to reflow its shell in a matter of seconds, enabling it 
 Shifters may also reshape parts of their shell into melee weapons such as knives or clubs.
 
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ +5 (20) T}@T{ +5 (30) T}@T{ \[em] (20)
-T}@T{ +10 (30) T}@T{ +5 (20) T}@T{ +10 (30) T}@T{ +10 (30)
-T}@T{ \[em] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 100 T}@T{ 2
-T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 60
-T}@T{ 12 T}@T{ 120 T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR    | \fBINT\fR     | \fBREF\fR | \fBSAV\fR | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
+| +5 (20)    | +5 (30)      | \[em] (20)    | +10 (30)  | +5 (20)   | +10 (30)  | +10 (30)  | \[em]     |
+| \fIINIT\fR | \fBSPD\fR    | \fBLUC\fR     | \fITT\fR  | \fIIR\fR  | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
+| 100        | 2            | \[em]         | \[em]     | \[em]     | 60        | 12        | 120       |
 .TE
+
 \f[B]Mobility System:\f[] Walker (4/20) \f[B]Skills:\f[] Blades 60, Deception 55, Disguise 60, Fray 50, Freerunning 55, Impersonation 60, Perception 50, Unarmed Combat 50 \f[B]Notes:\f[] Armor (13/13), Enhanced Hearing, Enhanced Vision, Shape\-Adjusting (Programmable Liquid Metal Form)
 .SS Snappers (Synthmorphs)
 Snapper exsurgents are typically crafted from vehicles or other large synthetic shells or by melding multiple synthmorphs together.
@@ -928,17 +933,18 @@ These limbs are heavy, double\-jointed and articulated with three joints.
 Each limb ends in either a triad of manipulatory digits or a larger pincer\-like claw.
 
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ +5 (20) T}@T{ +5 (30) T}@T{ \[em] (20)
-T}@T{ +10 (30) T}@T{ +5 (20) T}@T{ +10 (35) T}@T{ +10 (30)
-T}@T{ \[em] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 100 T}@T{ 2
-T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 70
-T}@T{ 14 T}@T{ 140 T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR    | \fBINT\fR     | \fBREF\fR | \fBSAV\fR | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
+| +5 (20)    | +5 (30)      | \[em] (20)    | +10 (30)  | +5 (20)   | +10 (35)  | +10 (30)  | \[em]     |
+| \fIINIT\fR | \fBSPD\fR    | \fBLUC\fR     | \fITT\fR  | \fIIR\fR  | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
+| 100        | 2            | \[em]         | \[em]     | \[em]     | 70        | 14        | 140       |
 .TE
+
 \f[B]Mobility System:\f[] Walker (4/24) \f[B]Skills:\f[] Climbing 45, Fray 40, Freerunning 40, Perception 40, Unarmed Combat (Pincers) 55 (65) \f[B]Notes:\f[] 360\-degree Vision, Armor (16/16), Enhanced Vision, Extra Limbs (9, 12, or 15 total), Lidar, Magnetic System, Pincers (DV 2d10 + 3, AP \[en]3), Structural Enhancement
 .SS Whippers (Biomorph)
 
@@ -947,17 +953,18 @@ At the top of their trunk is another mass of 3\-meter long, strong, whip\-like t
 Some of these tentacles feature gripping surfaces for grabbing and holding (both for tool use and mobility), while others are sharp\-edged and useful for slicing through opponents.
 
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ +5 (20) T}@T{ +10 (30) T}@T{ +5 (20)
-T}@T{ +10 (30) T}@T{ \[em] (15) T}@T{ +5 (25) T}@T{ +5 (20)
-T}@T{ \[em] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 100 T}@T{ 2
-T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 35
-T}@T{ 7 T}@T{ 53 T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR    | \fBINT\fR | \fBREF\fR | \fBSAV\fR     | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
+| +5 (20)    | +10 (30)     | +5 (20)   | +10 (30)  | \[em] (15)    | +5 (25)   | +5 (20)   | \[em]     |
+| \fIINIT\fR | \fBSPD\fR    | \fBLUC\fR | \fITT\fR  | \fIIR\fR      | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
+| 100        | 2            | \[em]     | \[em]     | \[em]         | 35        | 7         | 53        |
 .TE
+
 \f[B]Movement Rate:\f[] 8/40 \f[B]Skills:\f[] Climbing 40, Fray 50, Free Fall 40, Freerunning 50, Infiltration 40, Perception 50, Unarmed Combat (Tentacles) 45 (55) \f[B]Notes:\f[] Enhanced Vision, Tentacle Whip (DV 2d10 + 1, AP \[en]1)
 .SS Wrappers (Biomorph)
 
@@ -966,17 +973,18 @@ A large circular mouth resides in their middle on one side and each arm ends in 
 Small vent sacs allow for thrusting in microgravity and sensory bands on the upper part of each arm provide low\-frequency hearing and infrared\-equivalent sensing Their name comes from their tendency to drop on opponents from above, wrapping themselves around the head and arms.
 
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ +5 (20) T}@T{ +5 (20) T}@T{ +5 (20)
-T}@T{ +10 (30) T}@T{ \[em] (10) T}@T{ +10 (30) T}@T{ +10 (30)
-T}@T{ \[em] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 100 T}@T{ 1
-T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 45
-T}@T{ 9 T}@T{ 68 T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR    | \fBINT\fR | \fBREF\fR | \fBSAV\fR     | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
+| +5 (20)    | +5 (20)      | +5 (20)   | +10 (30)  | \[em] (10)    | +10 (30)  | +10 (30)  | \[em]     |
+| \fIINIT\fR | \fBSPD\fR    | \fBLUC\fR | \fITT\fR  | \fIIR\fR      | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
+| 100        | 1            | \[em]     | \[em]     | \[em]         | 45        | 9         | 68        |
 .TE
+
 \f[B]Movement Rate:\f[] 4/16 \f[B]Skills:\f[] Fray 40, Free Fall 50, Perception 50, Unarmed Combat (Grapple) 50 (60) \f[B]Notes:\f[] Armor (8/8), Bite (DV 2d10 + 3, AP \[en]5, must grapple first), Chameleon Skin, Claws (DV 1d10 + 2, AP \[en]2), Enhanced Hearing, Infrared Sensing, Vacuum Sealing
 .SS Exsurgent Psi
 
@@ -1245,34 +1253,36 @@ A few examples of the different Factor phenotypes are described below.
 The ambassador Factor phenotypes are the ones who most commonly handle direct interactions with transhumanity.
 Most likely to put transhumans at ease, these Factors feature a section of sensor nodules that loosely approximate a \[lq]face.\[rq]
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ 20 T}@T{ 10 T}@T{ 20
-T}@T{ 10 T}@T{ 15 T}@T{ 15 T}@T{ 20
-T}@T{ \[em] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 60 T}@T{ 1
-T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 30
-T}@T{ 7 T}@T{ 45 T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR    | \fBINT\fR | \fBREF\fR | \fBSAV\fR | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
+| 20         | 10           | 20        | 10        | 15        | 15        | 20        | \[em]     |
+| \fIINIT\fR | \fBSPD\fR    | \fBLUC\fR | \fITT\fR  | \fIIR\fR  | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
+| 60         | 1            | \[em]     | \[em]     | \[em]     | 30        | 7         | 45        |
 .TE
+
 \f[B]Movement Rate:\f[] 4/16 \f[B]Skills:\f[] Deception 70, Exotic Ranged Attack: Factor Dust 45, Fray 25, Free Fall 40, Hardware: Electronics 35, Infosec 35, Intimidation 50, Kinesics 40, Perception 50, Persuasion 60, Protocol 50, Research 35, Unarmed Combat 30 \f[B]Notes:\f[] Access Jacks, Chameleon Skin, Grip Pads, Infrared Sensing, Magnetoception, Poison Gland (Factor Dust Toxin)
 .SS Guardians
 
 Guardian Factors serve as bodyguards for ambassadors or other Factors whenever they leave a Factor ship.
 
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ 20 T}@T{ 20 T}@T{ 15
-T}@T{ 20 T}@T{ 10 T}@T{ 25 T}@T{ 15
-T}@T{ \[em] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 70 T}@T{ 1
-T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 50
-T}@T{ 10 T}@T{ 75 T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR    | \fBINT\fR | \fBREF\fR | \fBSAV\fR | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
+| 20         | 20           | 15        | 20        | 10        | 25        | 15        | \[em]     |
+| \fIINIT\fR | \fBSPD\fR    | \fBLUC\fR | \fITT\fR  | \fIIR\fR  | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
+| 70         | 1            | \[em]     | \[em]     | \[em]     | 50        | 10        | 75        |
 .TE
+
 \f[B]Movement Rate:\f[] 4/20 \f[B]Skills:\f[] Climbing 40, Exotic Ranged Attack: Factor Dust 65, Fray 50, Free Fall 40, Freerunning 40, Infiltration 40, Intimidation 50, Kinesics 20, Perception 50, Profession: Security Procedures 50, Unarmed Combat (Tentacles) 50 (60) \f[B]Notes:\f[] Chameleon Skin, Eelware, Electrical Sense, Grip Pads, Infrared Sensing, Magnetoception, Poison Gland (Factor Dust Toxin), Tentacle Whip (DV 2d10 + 1, AP \[en]1)
 
 .SH The Iktomi
@@ -1523,17 +1533,18 @@ Area effect and spray weapons do half damage.
 Fractals are self\-repairing, regenerating damage at the rate of 1d10 points per half hour and repairing wounds at the rate of 1 per hour after all damage is healed.
 
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ 30 T}@T{ 25 T}@T{ 30
-T}@T{ 20 T}@T{ 10 T}@T{ 25 T}@T{ 30
-T}@T{ \[em] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 100 T}@T{ 1
-T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 50
-T}@T{ 20 T}@T{ \[em] T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR    | \fBINT\fR | \fBREF\fR | \fBSAV\fR | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
+| 30         | 25           | 30        | 20        | 10        | 25        | 30        | \[em]     |
+| \fIINIT\fR | \fBSPD\fR    | \fBLUC\fR | \fITT\fR  | \fIIR\fR  | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
+| 100        | 1            | \[em]     | \[em]     | \[em]     | 50        | 20        | \[em]     |
 .TE
+
 \f[B]Skills:\f[] Beam Weapons 50, Climbing 60, Fray 40, Free Fall 40, Freerunning 50, Infiltration 70, Infosec 65, Interfacing 45, Intimidation 50, Kinetic Weapons 60, Perception 50, Programming: Nanofabrication 80, Research 40, Spray Weapons 45, Unarmed Combat 55 \f[B]Notes:\f[] Any implants, gear, weapons, or enhancements the gamemaster desires
 .SS Headhunters
 
@@ -1543,34 +1554,36 @@ Their primary purpose is to grasp on to the heads of victims and cut through the
 Collected heads are then flown to nearby special facilities for forced uploading.
 
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ 10 T}@T{ 20 T}@T{ 15
-T}@T{ 20 T}@T{ 5 T}@T{ 10 T}@T{ 15
-T}@T{ \[em] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 70 T}@T{ 1
-T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 30
-T}@T{ 6 T}@T{ \[em] T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR    | \fBINT\fR | \fBREF\fR | \fBSAV\fR | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
+| 10         | 20           | 15        | 20        | 5         | 10        | 15        | \[em]     |
+| \fIINIT\fR | \fBSPD\fR    | \fBLUC\fR | \fITT\fR  | \fIIR\fR  | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
+| 70         | 1            | \[em]     | \[em]     | \[em]     | 30        | 6         | \[em]     |
 .TE
+
 \f[B]Mobility System:\f[] Winged (8/32) \f[B]Skills:\f[] Flight 70, Fray 60, Exotic Melee Weapon: Buzz\-saws 55, Infiltration 60, Investigation 40, Perception 40, Unarmed Combat 55 \f[B]Notes:\f[] Armor 6/6, Buzzsaws (1d10 + 3 DV), Enhanced Vision, Lidar, T\-Ray Emitter
 .SS Hunter\-Killers
 These lethal flying drones achieved air superiority during TITAN military operations.
 Their sleek jet\-powered form unfolds for vectored\-thrust hovering and weapons deployment.
 
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ 15 T}@T{ 30 T}@T{ 15
-T}@T{ 30 T}@T{ 5 T}@T{ 20 T}@T{ 15
-T}@T{ \[em] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 90 T}@T{ 2
-T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 50
-T}@T{ 10 T}@T{ \[em] T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR    | \fBINT\fR | \fBREF\fR | \fBSAV\fR | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
+| 15         | 30           | 15        | 30        | 5         | 20        | 15        | \[em]     |
+| \fIINIT\fR | \fBSPD\fR    | \fBLUC\fR | \fITT\fR  | \fIIR\fR  | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
+| 90         | 2            | \[em]     | \[em]     | \[em]     | 50        | 10        | \[em]     |
 .TE
+
 \f[B]Mobility System:\f[] Thrust Vector (8/80) \f[B]Skills:\f[] Beam Weapons 55, Flight 80, Fray 60, Infiltration 40, Kinetic Weapons 65, Perception 50, Seeker Weapons 80 \f[B]Notes:\f[] Armor 14/14, Anti\-Glare, Chameleon Skin, Enhanced Vision, Lidar, Radar, Shape\-Adjusting \f[B]Typical Weapons:\f[] 2 Particle Beam Rifles, 2 Railgun Machine Guns, 2 Seeker Rifles
 .SS Warbots
 
@@ -1578,17 +1591,18 @@ Warbots are massive, armored, vaguely anthropomorphic mecha, used for heavy comb
 Bipedal, these warbots are equipped with four arms and a pair of grasping mechanical tentacles, along with numerous weapon systems.
 
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ 15 T}@T{ 20 T}@T{ 15
-T}@T{ 20 T}@T{ 5 T}@T{ 25 T}@T{ 15
-T}@T{ \[em] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 60 T}@T{ 2
-T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 80
-T}@T{ 16 T}@T{ \[em] T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR    | \fBINT\fR | \fBREF\fR | \fBSAV\fR | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
+| 15         | 20           | 15        | 20        | 5         | 25        | 15        | \[em]     |
+| \fIINIT\fR | \fBSPD\fR    | \fBLUC\fR | \fITT\fR  | \fIIR\fR  | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
+| 60         | 2            | \[em]     | \[em]     | \[em]     | 80        | 16        | \[em]     |
 .TE
+
 \f[B]Mobility System:\f[] Walker (4/20) \f[B]Skills:\f[] Beam Weapons 60, Exotic Melee Weapon: Tentacles 40, Fray 50, Infiltration 30, Kinetic Weapons 70, Perception 50, Seeker Weapons 50, Spray Weapons 50, Unarmed Combat 50 \f[B]Notes:\f[] Armor 20/20, 360\-Degree Vision, Anti\-Glare, Chameleon Skin, Chem Sniffer, Cyber Claws (2d10 + 6 DV), Electrical Sense, Enhanced Vision, Extra Limbs (6), Lidar, Magnetic System, Pneumatic Limbs, Radar, Tentacles (prehensile, 1d10 + 6 DV), T\-Ray Emitter
 \f[B]Typical Weapons:\f[] Particle Beam Rifle, Plasma Rifle, Pulser, Railgun Machine Gun, Seeker Rifle, Torch
 .SS Self\-Replicating Nanoswarms
@@ -1624,17 +1638,18 @@ Assume they have any skill they need at a minimum of 40.
 Such skills may rapidly improve as needed.
 
 .TS
-tab(@); l l l l l l l l.
-T{ COG T}@T{ COO T}@T{ INT T}@T{ REF
-T}@T{ SAV T}@T{ SOM T}@T{ WIL T}@T{ MOX
-T} _ T{ 25 T}@T{ 20 T}@T{ 25
-T}@T{ 20 T}@T{ 5 T}@T{ 15 T}@T{ 15
-T}@T{ \[em] T} T{ INIT T}@T{ SPD T}@T{
-LUC T}@T{ TT T}@T{ IR T}@T{ DUR T}@T{
-WT T}@T{ DR T} T{ 90 T}@T{ 1
-T}@T{ \[em] T}@T{ \[em] T}@T{ \[em] T}@T{ 70
-T}@T{ \[em] T}@T{ \[em] T}
+box nospaces tab(|);
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0
+-  - - - - - - - - -
+r0 r r r r r r r r l0
+r0 r r r r r r r r l0.
+| \fBCOG\fR  | \fBCOO\fR | \fBINT\fR | \fBREF\fR | \fBSAV\fR | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
+| 25         | 20        | 25        | 20        | 5         | 15        | 15        | \[em]     |
+| \fIINIT\fR | \fBSPD\fR | \fBLUC\fR | \fITT\fR  | \fIIR\fR  | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
+| 90         | 1         | \[em]     | \[em]     | \[em]     | 70        | \[em]     | \[em]     |
 .TE
+
 .SS Nanovirii
 
 The TITANs unleashed a number of biowar plagues during the Fall.
