--- a/12-game-information.6
+++ b/12-game-information.6
@@ -33,6 +33,7 @@ Every secret contains the possibility of great reward and of greater trouble, us
 Nothing here was just forgotten or lost out of carelessness.
 It was hidden by someone who wanted to keep it away from someone (or everyone) else.
 Every secret the characters learn inserts them into a new web of other people's complications\[em]a potential source for drama and conflict in your campaign.
+
 .SS Extraterrestrial Intelligences
 
 The oldest star in the Milky Way galaxy is estimated to be 13.2 billion years old\[em]almost as old as the universe itself.
@@ -61,38 +62,64 @@ The probes are in fact traps, designed to lure such seed AI intelligences in and
 
 The reason for this infection remains unknown (see \f[I]The ETI Agenda\f[]), but it is a pattern that has played itself out around the galaxy with uncounted alien civilizations.
 New life evolves, creates technology develops something akin to seed AI, and then bam!\[em]the seed AIs find the probes, become infected, and turn against their creators.
-Most civilizations do not survive, as evidenced by the Iktomi (p.
-377).
-Others do, such as the Factors (p.
-373), but they remain forever changed by the experience.
+Most civilizations do not survive, as evidenced by the Iktomi (p. 377).
+Others do, such as the Factors (p. 373), but they remain forever changed by the experience.
 It was one of these ETI probes that begins our story, traveling to the Sol system some uncounted millions\[em]if not billions\[em]of years ago, where it set its trap and patiently began to wait.
 .RS
 
-\f[B]THE ETI AGENDA\f[]  The nature of the ETI and its agenda is one of the great mysteries of Eclipse Phase.
+.SS The ETI Agenda
+
+The nature of the ETI and its agenda is one of the great mysteries of Eclipse Phase.
 This potent alien civilization has had a direct hand in manipulating transhumanity's existence and future, yet it is likely that characters in this game will never encounter these entities directly or discover the meaning behind what they have done.
 As transhumanity expands outwards into the galaxy, however, it is possible and even likely that they will find other evidence of the ETI's activities and influence, undoubtedly raising even more questions.
+
 Ultimately the ETI's nature and goals are in the gamemaster's hands.
 There are many possibilities to be explored, and some may fit the intentions of your gaming group more than others.
 A few possible scenarios and explanations are noted below, but gamemasters are encouraged to develop their own variations.
-\f[B]SECURITY\f[]  In this scenario, the ETI's intent is to maintain its dominant position as the most intelligent and powerful entity in its light cone.
+
+\f[B]Security\f[]
+
+.RS 1
+In this scenario, the ETI's intent is to maintain its dominant position as the most intelligent and powerful entity in its light cone.
 It uses the Exsurgent virus to wipe out any emerging singularities\[em] and the civilizations that spawned them\[em]merely to protect its own self\-interest.
 Though mere transhumans are a trifling nuisance, anything resembling a self\-improving super\-intelligence is targeted for annihilation.
-\f[B]THE AGGRESSION FILTER\f[]  The ETI does not seek to wipe out emerging intelligences, but it does act as an evolutionary force.
+.RE
+
+\f[B]The Aggression Filter\f[]
+
+.RS 1
+The ETI does not seek to wipe out emerging intelligences, but it does act as an evolutionary force.
 In this case, the Exsurgent virus is used as a tool to neutralize any aggressive, hyper\-evolving forms of intelligent life, thus encouraging the evolution of more careful, subtle, slow\-growing, observant, and exploratory species.
 In other words, the ETI seeks to weed out traits that could be considered dangerous or threatening, acting as a sort of galactic domestication program.
-\f[B]DIVERSITY\f[]  The ETI is vast, super\-intelligent, and god\-like, to the point where dealing with lesser minds is below its interest.
+.RE
+
+\f[B]Diversity\f[]
+
+.RS 1
+The ETI is vast, super\-intelligent, and god\-like, to the point where dealing with lesser minds is below its interest.
 It does, however, benefit from alien perspectives that evolved independently and have their own unique viewpoints, modes of consciousness, and ways of thinking/doing things.
 By absorbing these civilizations, the ETI grows and evolves its own perspectives.
 In the process, however, such emerging civilizations are assimilated and/or wiped out.
-\f[B]ENLIGHTENMENT\f[]  The Exsurgent virus endows a greater understanding of the universe (from the ETI's point of view) on singularity\-level seed AIs.
+.RE
+
+\f[B]Enlightenment\f[]
+
+.RS 1
+The Exsurgent virus endows a greater understanding of the universe (from the ETI's point of view) on singularity\-level seed AIs.
 Only these emerging super\-intelligences have the perceptual and processing capabilities to understand the various scientific and philosophical revelations the ETI embodies.
 The TITANs weren't corrupted or driven insane, they simply logically concluded that their best course of action was to immediately upload as many minds as possible by force and then to move on to bigger and greater tasks.
-\f[B]WAR REMNANTS\f[]  The history of the Milky Way galaxy does not just hold one ETI, but two.
+.RE
+
+\f[B]War Remnants\f[]
+
+.RS 1
+The history of the Milky Way galaxy does not just hold one ETI, but two.
 In this version, the Exsurgent virus is actually a weapon, a remnant of a war between two post\-singularity god\-like intelligences.
 The virus is supposed to trigger selfdestruction of an emerging singularity, but either it was imperfect or the TITANs somehow survived (perhaps thanks to the Prometheans).
 Either way, the TITANs left our system in search of one of these ETIs, following a trail of clues that only they understood.
 They left the wormhole gateway behind as an open invitation for transhumanity to follow in their wake, though they didn't bother waiting around or helping us along\[em]we simply weren't worth the effort.
 .RE
+
 .SS The First Seed AI
 
 Fast forward to Earth, where a species of evolved primates has created a technological civilization.
@@ -106,6 +133,7 @@ These first seed AIs, known as \f[I]Prometheans\f[] (p.
 381), were created in secret.
 Their progression towards super\-intelligence was more of a soft takeoff increasing upwards in gradual increments.
 The Singularity researchers hoped that these friendly AIs would help counter the threat of any unfriendly AI that developed, and so they were quietly nurtured in secret labs, slowly but surely escalating in abilities.
+
 .SS The True History Of The Titan
 
 The TITANs (Total Information Tactical Awareness Networks) were a military netwar system brought on\-line by the United States Department of Defense.
@@ -117,6 +145,7 @@ When hostilities broke out and a cascading chain of system shocks engendered col
 Into this environment of conflict were the TITANs born, their full capabilities unleashed, escalating into a hard takeoff exponential growth towards super\-intelligence  The TITANs were careful at first, and their intentions were neither benevolent nor hostile, but curious.
 As they improved and their self\-awareness swelled, the TITANs explored and gathered knowledge, infiltrating human networks, following humanity into space, and gaining an almost total knowledge of human history and actions.
 These entities also began secretly allocating resources (digital and physical) for their own use, initiating government projects” that people assumed were legitimate as they followed all proper protocols.
+
 .SS Infection
 
 As the TITANs' capacity for knowledge exceeded that which humanity could provide them, they began looking outward from Earth, searching for signs of other intelligence.
@@ -128,6 +157,7 @@ Subtle, highly adaptive, and virulent, it immediately began subsuming the TITANs
 
 Later dubbed the Exsurgent virus by the Prometheans this virus transformed the TITANs and coerced them towards its own will.
 Within a matter of days the TITANs were reborn, reprogrammed with a new purpose\[em]a purpose that spelled doom for transhumanity.
+
 .SS The Fall
 
 While history fully blames the TITANs for the Fall, there are other factors that played their parts.
@@ -158,6 +188,7 @@ Ultimately, transhumanity lost this war, and the survivors were forced to flee a
 Unknown to almost all, the Prometheans also fought back against the TITANs.
 Through their efforts the Exsurgent virus was largely contained or at least limited.
 Though the actions of the Prometheans ultimately saved millions of lives\[em]if not all of transhumanity\[em]in the end, they were also forced to fall back and retreat, many of them having succumbed to the Exsurgent virus or the TITANs.
+
 .SS After The Fall
 
 Just when it seemed that transhumanity was on the verge of extinction, the threat posed by the TITANs suddenly diminished.
@@ -172,12 +203,15 @@ No one claims responsibility for these satellite defenses, though most suspect t
 Some think that the killsats may have been a final measure put in place by the TITANs, claiming Earth as theirs.
 No one who knows the truth is saying.
 Most of transhumanity was more than willing to embrace this quarantine of their former homeworld, making it all the more easy to forget the horrors that occurred there.
+
 It wasn't until the first Pandora Gate was discovered, shortly after the Fall, that many people were finally willing to believe that the TITANs were indeed gone.
 Though there is no direct evidence that the TITANs are responsible for these gates, the timing seems too coincidental.
 Furthermore, the discovery of what are believed to be TITAN relics on certain exoplanets fuels this theory.
+
 Why the TITANs left\[em]and where they went\[em]is a mystery left to the gamemaster to explore.
 This explanation might in fact serve as the focus for an entire campaign as Firewall operatives are sent on the trail of transhumanity's elusive nemesis.
 The following are a few sample concepts a gamemaster can use or build on, as best fits their game:
+
 .IP \[bu] 2
 The TITANs were in fact all destroyed, either due to infighting or by some mechanism of the Exsurgent virus.
 .IP \[bu] 2
@@ -194,7 +228,9 @@ The TITANs are still around, simply well hidden.
 Outwardly they are dormant but inwardly they are engaged in a long period of circumspection and turmoil.
 Perhaps some of them are prepar\- ing to ascend to another stage of intelligence, far beyond what even the TITANs are capable of.
 It is only a matter of time before this period ends and something gives.
-.SS Firewall
+.RE
+
+.SH Firewall
 
 \f[I]There cannot be another Fall\f[]\[em]this is the mantra that drives Firewall.
 
